<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="Fragments.ViewFacilityFragment">

    <!-- Facility Image -->
    <ImageView
        android:id="@+id/imageview_facility_image"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/facility_image_desc"
        android:src="@drawable/example_facility"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Facility Name -->
    <TextView
        android:id="@+id/textview_facility_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/facility_name_label"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageview_facility_image"
        app:layout_constraintVertical_bias="0.1" />

    <!-- Facility Location -->
    <TextView
        android:id="@+id/textview_facility_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/facility_location_label"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_facility_name"
        app:layout_constraintVertical_bias="0.1" />

    <!-- Edit Facility Button -->
    <Button
        android:id="@+id/button_edit_facility"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/lighter_purple"
        android:text="@string/edit_facility_button"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_facility_location" />

    <!-- Admin Delete Facility Button-->
    <Button
        android:id="@+id/button_delete_facility"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/lighter_purple"
        android:text="@string/delete_facility_button"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_facility_location" />
</androidx.constraintlayout.widget.ConstraintLayout>