...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/enter_event_button" />

        <!-- Create/Manage Facility Button -->
        <Button
            android:id="@+id/manage_facility_button"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/lighter_purple"
            android:text="@string/create_manage_facility_string"
...
